2012-05-22  Carl Hetherington  <cth@carlh.net>

	* src/tools/fixlengths.cc: add a few more options.

	* test: fix up a few test bits.

	* README: very brief introduction to a few things.

2012-05-22  Carl Hetherington  <cth@carlh.net>

	* Version 0.20 released.